[package]
name = "polystore-neo4j"
version = "0.1.0"
edition = "2024"
description = "Neo4j Bolt adapter for polystore::GraphStore"
license = "MIT"
repository = "https://github.com/anatta-rs/polystore-neo4j"
authors = ["Lsh <lsh@anatta.dev>"]
keywords = ["neo4j", "graph", "polystore", "bolt"]
categories = ["database", "api-bindings"]

[dependencies]
neo4rs = "0.9.0-rc.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
