[package]
name = "graph-server"
version = "0.1.0"
edition = "2024"
description = "HTTP server for any polystore::GraphStore implementation. Backends: neo4j (default), in-memory."
license = "MIT"
repository = "https://github.com/anatta-rs/graph-server"
authors = ["Lsh <lsh@anatta.dev>"]
keywords = ["neo4j", "graph", "polystore", "bolt", "http"]
categories = ["database", "api-bindings", "network-programming"]

[features]
default = ["neo4j-backend"]
neo4j-backend = ["dep:neo4rs"]
memory-backend = []

[dependencies]
polystore = { git = "https://github.com/anatta-rs/polystore", branch = "main" }
neo4rs = { version = "0.9.0-rc.9", optional = true }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[[bin]]
name = "graph-server"
path = "src/bin/graph-server.rs"
required-features = ["neo4j-backend"]
